# llm_zoomcamp_2024

./: .gitignore  README.md  pyproject.toml
hw1/: answers.md  hw1.py
hw1/resources/: compose.yaml
hw2/: answers.md  commands.md  hw2.py
hw2/resources/: ollama-gemma2b.yaml  ollama.yaml
hw3/: answers.md  hw3.py
hw3/resources/: compose.yaml
hw4/: answers.md  hw4.py
