[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Evgenii Ignatev <yevgeniy.ignatyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
elasticsearch = "^8.14.0"
tiktoken = "^0.7.0"
openai = "^1.35.9"
sentence-transformers = "^3.0.1"
numpy = "<2.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
